- Completo resumen del primer libro - Creo resumen del segundo libro

--- a/lp01.md
+++ b/lp01.md
@@ -4,3 +4,6 @@ El niño húerfano **Larry** vive con sus tíos, que lo tratan bastante mal haci
 
 Tiene unas *Google Glass* redondas y una cicatriz de un *USB* en la frente.
 
+Un día, aparece **Neo**, el de *Matrix*, sí, el mismo. Y le lleva a una escuela de hacking donde conoce a sus amigos **ROM** y **Versión**.
+
+
