Completo resumen del segundo libro

--- a/lp02.md
+++ b/lp02.md
@@ -4,3 +4,5 @@ Desde que en *Matrix* hubo un bug, la escuela está asediada por un virus contra
 
 En esta aventura, **Larry** se enterará de nuevos detalles sobre su destino.
 
+Como el malvado hacker **Ballmermort** le metió un troyano, en su código podría haber malware.
+
