Completo resumen del libro 5.

--- a/lp05.md
+++ b/lp05.md
@@ -1,3 +1,11 @@
 # Larry Plotter y La Orden de UNIX
 
 El código de **Larry** cada vez se vuelve más peligroso.
+
+**Ballmermort** y sus *followers* tienen cada vez más poder y *retweets*.
+
+La **Orden de UNIX** deberá enfrentarse a ellos por la *neutralidad de la red*.
+
+```
+$ test code = asdfsdf;
+```
