Completo resumen del cuarto libro.

--- a/lp04.md
+++ b/lp04.md
@@ -1,5 +1,6 @@
 # Larry Plotter y El Malware de Fuego
 
-Una importante *hackaton* se celbra en la escuela, y el portátil de *Digg Ory* se avería.
+Una importante *hackaton* se celbra en la escuela, 
+y el portátil de *Digg Ory* se avería.
 
-
+De esta manera, se pierde la saga *Crespúsculo* que tenía guardada en PDF.
