--- a/lp06.md
+++ b/lp06.md
@@ -1,3 +1,5 @@
 # Larry Plotter y El Misterio del Hacker
 
 **Larry** descubre un libro de ensamblador y compiladores que perteneció a un misterioso *hacker*.
+
+A lo largo de la historio, resulta que **Ballmermort** está detrás de todo.
