--- a/lp06.md
+++ b/lp06.md
@@ -1,3 +1,5 @@
 # Larry Plotter y El Misterio del Hacker
 
 **Larry** descubre un libro de ensamblador y compiladores que perteneció a un misterioso *hacker*.
+
+**Larry** y el director del colegio, **Linus Dumble d'Or** (primo hermano de **Gandalf**) encuentran una forma de combatirle.
